# UI-Superimposition

./: .gitignore  Dockerfile.backend  README.md  desktop.ini  docker-compose.yml
backend/: app.py  engine_adapter.py  make_placeholder_sfx.py  noise_superimposition_test.ipynb  requirements.txt
backend/generator/: audio_io.py  batch_generate.py  evaluate_asr.py
backend/superimposition/: noise_superimposition.py
cranbrook-audio-project/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cranbrook-audio-project/augment/: augment.py
cranbrook-audio-project/docs/: setup.md
cranbrook-audio-project/mixer/: mixer.py
cranbrook-audio-project/transform/: CMakeLists.txt  README.md  doppler.py  saf_binaural.c  saf_binaural.h  saf_cffi.py  transform.py
metadata/: CHILD_NOISE_01_snr-3_driver_d0w0v0_seed1000.json  CHILD_NOISE_01_snr-3_driver_d2w1v1_seed3.json  CHILD_NOISE_01_snr-5_driver_seed42_v000.json  CHILD_NOISE_01_snr0_driver_d0w0v0_seed1000.json  CHILD_NOISE_01_snr0_driver_d1w0v0_seed1.json  CHILD_NOISE_01_snr10_driver_seed42_v000.json  CHILD_NOISE_01_snr20_driver_seed42_v000.json  CHILD_NOISE_01_snr3_driver_d0w0v0_seed1000.json  CHILD_NOISE_01_snr3_driver_d2w1v1_seed2.json  CHILD_NOISE_01_snr3_driver_d2w1v1_seed7.json  CHILD_NOISE_01_snr5_driver_d0w0v0_seed42.json  CHILD_NOISE_01_snr5_driver_seed42_v000.json  CHILD_NOISE_01_snr6_driver_d0w0v0_seed1000.json  CHILD_NOISE_01_snr6_driver_d3w2v2_seed42.json  CHILD_NOISE_01_snr6_driver_seed42_v000.json  CHILD_NOISE_01_snr9_driver_seed42_v000.json  CMD_WIPERS_01_snr-5_driver_d0w0v0_seed1000.json  CMD_WIPERS_01_snr-5_driver_d2w1v1_seed3.json  CMD_WIPERS_01_snr0_driver_d0w0v0_seed1000.json  CMD_WIPERS_01_snr10_driver_d0w0v0_seed1000.json  CMD_WIPERS_01_snr5_driver_d0w0v0_seed1000.json  CMD_WIPERS_01_snr5_driver_d0w0v0_seed42.json  OVERLAP_01_snr0_driver_d0w0v0_seed1000.json  OVERLAP_01_snr0_driver_d2w1v1_seed3.json  OVERLAP_01_snr3_driver_d0w0v0_seed1000.json  OVERLAP_01_snr5_driver_d0w0v0_seed42.json  OVERLAP_01_snr6_driver_d0w0v0_seed1000.json  RAIN_MASK_01_snr-3_driver_d0w0v0_seed1000.json  RAIN_MASK_01_snr-3_driver_d2w1v1_seed3.json  RAIN_MASK_01_snr0_driver_d0w0v0_seed1000.json  RAIN_MASK_01_snr3_driver_d0w0v0_seed1000.json  RAIN_MASK_01_snr5_driver_d0w0v0_seed42.json  WAKE_HVAC_01_snr-5_driver_d0w0v0_seed1000.json  WAKE_HVAC_01_snr-5_driver_d2w1v1_seed3.json  WAKE_HVAC_01_snr-5_front_passenger_d0w0v0_seed1000.json  WAKE_HVAC_01_snr0_driver_d0w0v0_seed1000.json  WAKE_HVAC_01_snr0_front_passenger_d0w0v0_seed1000.json  WAKE_HVAC_01_snr10_driver_d0w0v0_seed1000.json  WAKE_HVAC_01_snr10_front_passenger_d0w0v0_seed1000.json  WAKE_HVAC_01_snr5_driver_d0w0v0_seed1000.json  (+3 more)
presets/: te.json
scenarios/: demo.yaml
ui/: .gitignore  package-lock.json  package.json
ui/src/: App.jsx  api.js  (+6 more)
(+24 files in other folders)
